# fl0-backend

./: .env.example  Dockerfile  README.md  main.py  pyproject.toml  verify_app.py
app/api/routers/: auth.py  search.py  submissions.py
app/core/: auth.py  config.py  database.py  security.py
app/models/: schemas.py
app/services/: vector_service.py
app/static/: login_success.html
