[project]
name = "fl0"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.129.0",
    "fastembed>=0.7.4",
    "google-auth>=2.48.0",
    "google-auth-oauthlib>=1.2.4",
    "motor>=3.7.1",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.22",
    "qdrant-client>=1.16.2",
    "requests>=2.32.5",
    "streamlit>=1.54.0",
    "uvicorn>=0.40.0",
]
